Add threadId to avoid incompatible change to getId